# HttpsServer

./: .gitignore  CMakeLists.txt  FileOperater.h  HttpContext.cpp  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  Introduction.md  README.md  main.cpp  makefile  publish.sh
Gomoku/GomokuClient/: ChessGame.cpp  ChessGame.h  GomokuClient.cpp  GomokuClinet.h  HttpClient.h  client  main.cpp  makefile
Gomoku/GomokuClient/BackgroundManager/: backgroundManager.cpp
HttpServer/: CMakeLists.txt
HttpServer/examples/: TestHTTPS.cpp  simpleServer.cpp
HttpServer/include/http/: HttpContext.h  HttpRequest.h  HttpResponse.h  HttpServer.h
HttpServer/include/middleware/: Middleware.h  MiddlewareChain.h
HttpServer/include/middleware/cors/: CorsConfig.h  CorsMiddleware.h
HttpServer/include/middleware/limit/: LimitMiddleware.h
HttpServer/include/router/: Router.h  RouterHandler.h
HttpServer/include/session/: Session.h  SessionManager.h  SessionStorage.h
HttpServer/include/ssl/: SslConnection.h
HttpServer/include/utils/: FileUtil.h  MysqlUtil.h
HttpServer/include/utils/db/: DbConnection.h  DbConnectionPool.h  DbException.h
HttpServer/src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
HttpServer/src/middleware/: MiddlewareChain.cpp
HttpServer/src/middleware/cors/: CorsMiddleware.cpp
HttpServer/src/middleware/limit/: LimitMiddleware.cpp
HttpServer/src/router/: Router.cpp
HttpServer/src/session/: Session.cpp  SessionManager.cpp  SessionStorage.cpp
HttpServer/src/ssl/: SslConnection.cpp  SslContext.cpp
HttpServer/src/utils/db/: DbConnection.cpp  DbConnectionPool.cpp
Web/: WebServer.cpp  WebServer.h
Web/resource/: index.html
WebApps/GomokuServer/include/: AiGame.h  GomokuServer.h
WebApps/GomokuServer/include/handlers/: AiGameMoveHandler.h  AiGameStartHandler.h  BackendStatusHandler.h  EntryHandler.h  GameBackendHandler.h  LoginHandler.h  LogoutHandler.h  MenuHandler.h  RegisterHandler.h  ResourceCentorHandler.h  ResourceDownloadHandler.h  ResourceListHandler.h  ResourceUploadHandler.h
WebApps/GomokuServer/resource/: Backend.html  ChessGameVsAi.html  backend_status.html  entry.html  menu.html  menu_ori.html  resource_centor.html
WebApps/GomokuServer/src/: AiGame.cpp  GomokuServer.cpp  main.cpp
WebApps/GomokuServer/src/handlers/: AiGameMoveHandler.cpp  AiGameStartHandler.cpp  BackendStatusHandler.cpp  EntryHandler.cpp  GameBackendHandler.cpp  LoginHandler.cpp  Loginout.cpp  MenuHandler.cpp  RegisterHandler.cpp  ResourceCentorHandler.cpp  ResourceDownloadrHandler.cpp  ResourceListHandler.cpp  ResourceUploadrHandler.cpp
resource/: login.html  register.html
